--- a/resources/assets/GEPS-WEB-BIV-CU01.html
+++ b/resources/assets/GEPS-WEB-BIV-CU01.html
@@ -137,7 +137,7 @@
                     </div>
                     <form action="#" class="form bg-white pa4864 g32">
                         <div class="options-wrapper">
-                            <div class="options-wrap">
+                            <div class="options-wrap g20">
                                 <div class="input-group">
                                     <label for="">고객번호</label>
                                     <input type="text" placeholder="번호를 입력하세요">
@@ -151,7 +151,7 @@
                                     </div>
                                 </div>
                                 <div class="dropdown-group">
-                                    <h2>타이틀</h2>
+                                    <h2>인증정책</h2>
                                     <div class="dropdown-list-wrap">
                                         <button class="dropdown-button" data-target="drop01">전체</button>
                                         <ul id="drop01" class="dropdown-list">
@@ -205,7 +205,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="options-wrap">
+                            <div class="options-wrap g20">
                                 <div class="input-group">
                                     <label for="">이름</label>
                                     <input type="text" placeholder="이름을 입력하세요">
