--- a/resources/assets/GEPS-WEB-SER-FA02.html
+++ b/resources/assets/GEPS-WEB-SER-FA02.html
@@ -135,7 +135,7 @@
                     </ul>
                 </div>
                 <div class="pt64">
-                    <form action="" class="write-wrap">
+                    <form action="" class="write-wrap bbt-gray">
                         <div class="input-group">
                             <label for="">질문 내용</label>
                             <!-- form edit filed -->
