--- a/resources/assets/GEPS-WEB-SER-NO02.html
+++ b/resources/assets/GEPS-WEB-SER-NO02.html
@@ -135,7 +135,7 @@
                     </ul>
                 </div>
                 <div class="pt64">
-                    <form action="" class="write-wrap">
+                    <form action="" class="write-wrap bbt-gray">
                         <div class="input-group">
                             <label for="">공지사항 제목</label>
                             <input type="text" id="text01" placeholder="텍스트를 입력하세요">
@@ -156,9 +156,11 @@
                             <!-- form edit filed -->
                             <textarea name="" id="" style="height: 559px; flex:1; border: solid 1px #DDDDDD; border-radius: 4px; resize: none; padding: 16px;" placeholder="공지사항을 입력하세요."></textarea>
                         </div>
-                        <div class="input-group">
-                            <label for="">파일첨부</label>
-                            <button type="button" class="btn btn-sm btn-gray">찾아보기</button>
+                        <div class="file-group">
+                            <h2 class="mr40">파일첨부</h2>
+                            <label for="fileupload">버튼명</label>
+                            <input type="file" id="fileupload"/>
+                            <span>* 반드시 양식 파일을 이용해 주세요.</span>
                         </div>
                     </form>
                     <div class="table-top d-flex g8 mt32">
