TE01 완료, GU01추가

--- a/resources/assets/GEPS-WEB-SER-ME04.html
+++ b/resources/assets/GEPS-WEB-SER-ME04.html
@@ -271,7 +271,7 @@
                                     <li>325</li>
                                     <li>건</li>
                                 </ul>
-                                <button type="button" class="btn btn-sm btn-gray">명단확인</button>
+                                <button type="button" class="btn btn-sm btn-gray open-modal" data-modal-id="mdModal">명단확인</button>
                             </div>
                         </div>
                     </div>
@@ -400,6 +400,80 @@
             </div>
         </div>
     </div>
+
+    <!-- S:MD -->
+    <div id="mdModal" class="modal-wrap modal-md">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title">발신대상 확인</h3>
+            </div>
+            <div class="modal-body">
+                <div class="table-wrap table-wrap2">
+                    <table class="basic-table type2" id="">
+                        <colgroup>
+                            <col style="width: 100px;">
+                            <col style="width: 379px;">
+                        </colgroup>
+                        <thead>
+                            <tr>
+                                <th>번호</th>
+                                <th>수신 아이디 정보</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>563</td>
+                                <td>0109848****</td>
+                            </tr>
+                            <tr>
+                                <td>562</td>
+                                <td>0109848****</td>
+                            </tr>
+                            <tr>
+                                <td>561</td>
+                                <td>0109848****</td>
+                            </tr>
+                            <tr>
+                                <td>560</td>
+                                <td>0109848****</td>
+                            </tr>
+                            <tr>
+                                <td>559</td>
+                                <td>0109848****</td>
+                            </tr>
+                            <tr>
+                                <td>558</td>
+                                <td>0109848****</td>
+                            </tr>
+                            <tr>
+                                <td>557</td>
+                                <td>0109848****</td>
+                            </tr>
+                            <tr>
+                                <td>556</td>
+                                <td>0109848****</td>
+                            </tr>
+                            <tr>
+                                <td>555</td>
+                                <td>0109848****</td>
+                            </tr>
+                            <tr>
+                                <td>554</td>
+                                <td>0109848****</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="btn-group">
+                    <!-- <button type="button" class="btn-r btn-modal-close btn-close">취소</button> -->
+                    <button type="button" class="btn-r btn-modal-check">확인</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- E:MD -->
     
     <script src="js/jquery.min.js"></script>
     <script src="js/common.js"></script>
