--- a/resources/assets/GEPS-WEB-SER-GU01.html
+++ b/resources/assets/GEPS-WEB-SER-GU01.html
@@ -165,8 +165,22 @@
                             <tbody>
                                 <tr>
                                     <td>1</td>
-                                    <td>2023 상반기 신상조사 (국외)</td>
-                                    <td class="tl">국내 거주 연금수급의 신상신고 방법</td>
+                                    <td>
+                                        <div class="input-group edit-input">
+                                            <h2></h2>
+                                            <div class="editbtn-wrapper">
+                                                <label for="" class="hidden">프로필명</label>
+                                                <input type="text" id="text01" placeholder="텍스트를 입력하세요" value="2023 상반기 신상조사 (국외)">
+                                                <!-- <div id="editbtn-group" class="editbtn-wrap hidden">
+                                                    <div class="editbtn">
+                                                        <button id="close-btn"><i class="i i-circle-close"></i></button>
+                                                        <button class="save">저장</button>
+                                                    </div>
+                                                </div> -->
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td class="tl">2023 상반기 신상조사 (국외)</td>
                                     <td>                                    
                                         <div class="manage-btn-group">
                                             <button class="modify">미리보기</button>
@@ -180,8 +194,66 @@
                                 </tr>
                                 <tr>
                                     <td>2</td>
-                                    <td>2023 상반기 신상조사 (국내)</td>
+                                    <td>
+                                        <div class="input-group edit-input">
+                                            <h2></h2>
+                                            <div class="editbtn-wrapper">
+                                                <label for="" class="hidden">프로필명</label>
+                                                <input type="text" id="text02" placeholder="텍스트를 입력하세요" value="2023 상반기 신상조사 (국내)">
+                                                <!-- <div id="editbtn-group" class="editbtn-wrap hidden">
+                                                    <div class="editbtn">
+                                                        <button id="close-btn"><i class="i i-circle-close"></i></button>
+                                                        <button class="save">저장</button>
+                                                    </div>
+                                                </div> -->
+                                            </div>
+                                        </div>
+                                    </td>
                                     <td class="tl">국내 거주 연금수급의 신상신고 방법</td>
+                                    <td>                                    
+                                        <div class="manage-btn-group">
+                                            <button class="modify">미리보기</button>
+                                        </div>
+                                    </td>
+                                    <td>                                    
+                                        <div class="manage-btn-group">
+                                            <button class="delete">삭제</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>
+                                        <div class="input-group edit-input active" id="edit-input01">
+                                            <h2></h2>
+                                            <div class="editbtn-wrapper">
+                                                <label for="" class="hidden">프로필명</label>
+                                                <input type="text" id="text03" class="tl" placeholder="텍스트를 입력하세요" value="">
+                                                <div id="editbtn-group" class="editbtn-wrap active">
+                                                    <div class="editbtn">
+                                                        <button id="close-btn"><i class="i i-circle-close"></i></button>
+                                                        <button class="save">저장</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="input_file_warp">
+                                            <div class="input-group">
+                                                <label for="" class="hidden">기본</label>
+                                                <input type="text" id="text04" placeholder="텍스트를 입력하세요">
+                                            </div>
+                                            <div class="file-group">
+                                                <h2 class="hidden">파일첨부</h2>
+                                                <div>
+                                                    <label for="fileupload">찾아보기</label>
+                                                    <input type="file" id="fileupload"/>
+                                                </div>
+                                                <!-- <span>* 반드시 양식 파일을 이용해 주세요.</span> -->
+                                            </div>
+                                        </div>
+                                    </td>
                                     <td>                                    
                                         <div class="manage-btn-group">
                                             <button class="modify">미리보기</button>
@@ -214,10 +286,26 @@
     
     <script src="js/jquery.min.js"></script>
     <script src="js/common.js"></script>
-    <script>
-        // function(){
+    <script defer>
 
-        // }
+
+        // 프로필명에 포커싱 되면 인풋에 버튼 보여지게
+        // var inputFocus = document.getElementById('text03')
+        // var editBtn = document.getElementById('editbtn-group')
+
+        // inputFocus.addEventListener("focus", (e) => {
+        //     editInput01.classList.add('active');
+        //     editBtn.classList.remove('hidden');
+        //     editBtn.classList.add('active');
+        // })
+        // 프로필 명에 포커스 아웃 되면 인풋에 버튼 사라지게
+        // inputFocus.addEventListener("blur", (e) => {s
+        //     editBtn.classList.remove('active');
+        //     editBtn.classList.add('hidden');
+        // })
+
+        
+
     </script>
 </body>
 
