--- a/resources/assets/GEPS-WEB-SER-ME04.html
+++ b/resources/assets/GEPS-WEB-SER-ME04.html
@@ -468,7 +468,7 @@
             <div class="modal-footer">
                 <div class="btn-group">
                     <!-- <button type="button" class="btn-r btn-modal-close btn-close">취소</button> -->
-                    <button type="button" class="btn-r btn-modal-check">확인</button>
+                    <button type="button" class="btn-r btn-modal-check btn-close">확인</button>
                 </div>
             </div>
         </div>
