--- a/resources/assets/GEPS-WEB-SER-GU01.html
+++ b/resources/assets/GEPS-WEB-SER-GU01.html
@@ -142,8 +142,6 @@
                                 <li class="f-primary">2</li>
                                 <li>건</li>
                             </ul>
-                            <button type="button" class="btn btn-sm btn-outline-primary">
-                                <i class="i i-plus-b"></i>팝업 추가</button>
                         </div>
                         <table class="basic-table type2" id="">
                             <colgroup>
@@ -182,12 +180,12 @@
                                     </td>
                                     <td class="tl">2023 상반기 신상조사 (국외)</td>
                                     <td>                                    
-                                        <div class="manage-btn-group">
+                                        <div class="manage-btn-group g25">
                                             <button class="modify">미리보기</button>
                                         </div>
                                     </td>
                                     <td>                                    
-                                        <div class="manage-btn-group">
+                                        <div class="manage-btn-group g25">
                                             <button class="delete">삭제</button>
                                         </div>
                                     </td>
@@ -211,12 +209,12 @@
                                     </td>
                                     <td class="tl">국내 거주 연금수급의 신상신고 방법</td>
                                     <td>                                    
-                                        <div class="manage-btn-group">
+                                        <div class="manage-btn-group g25">
                                             <button class="modify">미리보기</button>
                                         </div>
                                     </td>
                                     <td>                                    
-                                        <div class="manage-btn-group">
+                                        <div class="manage-btn-group g25">
                                             <button class="delete">삭제</button>
                                         </div>
                                     </td>
@@ -255,12 +253,12 @@
                                         </div>
                                     </td>
                                     <td>                                    
-                                        <div class="manage-btn-group">
+                                        <div class="manage-btn-group g25">
                                             <button class="modify">미리보기</button>
                                         </div>
                                     </td>
                                     <td>                                    
-                                        <div class="manage-btn-group">
+                                        <div class="manage-btn-group g25">
                                             <button class="delete">삭제</button>
                                         </div>
                                     </td>
