--- a/resources/assets/GEPS-WEB-SER-ME03.html
+++ b/resources/assets/GEPS-WEB-SER-ME03.html
@@ -148,7 +148,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <button type="button" class="btn btn-md btn-primary">재발송</button>
+                                <button type="button" class="btn btn-md btn-primary btn-w76">재발송</button>
                             </div>
                         </div>
                         <table class="basic-table col-table type2 mt16" id="">
