--- a/resources/assets/GEPS-WEB-SER-PO01.html
+++ b/resources/assets/GEPS-WEB-SER-PO01.html
@@ -195,7 +195,7 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="manage-btn-group">
+                                        <div class="manage-btn-group g25">
                                             <button class="modify">수정</button>
                                             <button class="delete">삭제</button>
                                         </div>
@@ -225,7 +225,7 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="manage-btn-group">
+                                        <div class="manage-btn-group g25">
                                             <button class="modify">수정</button>
                                             <button class="delete">삭제</button>
                                         </div>
@@ -255,7 +255,7 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="manage-btn-group">
+                                        <div class="manage-btn-group g25">
                                             <button class="modify">수정</button>
                                             <button class="delete">삭제</button>
                                         </div>
@@ -285,7 +285,7 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="manage-btn-group">
+                                        <div class="manage-btn-group g25">
                                             <button class="modify">수정</button>
                                             <button class="delete">삭제</button>
                                         </div>
@@ -315,7 +315,7 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="manage-btn-group">
+                                        <div class="manage-btn-group g25">
                                             <button class="modify">수정</button>
                                             <button class="delete">삭제</button>
                                         </div>
