--- a/resources/assets/GEPS-WEB-SER-ME03.html
+++ b/resources/assets/GEPS-WEB-SER-ME03.html
@@ -165,7 +165,7 @@
                             <thead>
                                 <tr>
                                     <th>제목</th>
-                                    <th colspan="3" class="bg-white tl"></th>
+                                    <th colspan="3" class="bg-white tl">2023 여름 신상조사 참여 이벤트<span class="push">PUSH</span></th>
                                     <th>발신번호</th>
                                     <th colspan="3" class="bg-white tl">-</th>
                                 </tr>
